# but-heres-the-kicker

./: Cargo.toml
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
